fix(query): disclose traversal truncation